(Re)Implement transactions
Transactions are now implemented in terms of ODBC rather than using T-SQL.

4 tests added as well.

Also updated package.json to include dev dependencies.

All tests pass.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "mssql",
+  "description": "Microsoft Driver for Node.js for SQL Server",
+  "author": "Microsoft Corp.",
   "version": "0.0.1",
-  "main": "./lib/sql.js"
+  "main": "./lib/sql.js",
+  "devDependencies": {
+     "mocha" : "0.14.x",
+     "async" : "0.1.x"
+  }
 }
