Updated package name.
Updated package.json so that it refers to node-sqlserver instead of mssql
Updated .gitignore to ignore node_modules folder

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mssql",
+  "name": "node-sqlserver",
   "description": "Microsoft Driver for Node.js for SQL Server",
   "author": "Microsoft Corp.",
   "version": "0.0.1",
